--- a/pr0p0ll-mapping/index.html
+++ b/pr0p0ll-mapping/index.html
@@ -109,13 +109,13 @@
 	</script>
 
 	<div>
-		<label for="text">pr0p0ll-Ergebniss-JSON hier einfügen und mit ENTER umwandeln:</label>
+		<label for="text">pr0p0ll-Ergebnis-JSON hier einfügen und mit ENTER umwandeln:</label>
 	</div>
 	<div>
 		<textarea style="width: 100%;" id="jsonData" name="jsonData" cols="50" rows="10"></textarea> 	
 	</div>
 	<div>
-		<button onclick="process()">Click me</button>
+		<button onclick="process()">Leg los du Knecht</button>
 	</div>
 		<textarea style="width: 100%;" id="result" name="result" cols="50" rows="10"></textarea> 	
 </body>
