--- a/pr0p0ll-mapping/index.html
+++ b/pr0p0ll-mapping/index.html
@@ -50,9 +50,24 @@
 								// if this property matches you regex (starts with an a, ends with a number), it contains answer details
 								if (answerKey.test(answer)) {
 
-									mapping['0_answerId'] = answers[answer].id;
-									mapping['1_question'] = results[key].title;
-									mapping['2_answer'] = answers[answer].title;
+									mapping['00_answerId'] 		= answers[answer].id;
+									mapping['01_question'] 		= results[key].title;
+									mapping['02_type']	 		= results[key].answertype;
+									mapping['03_answer'] 		= answers[answer].title;
+									mapping['04_total'] 		= answers[answer].result.total;
+									mapping['05_male']	 		= answers[answer].result.gender.m;
+									mapping['06_female']	 	= answers[answer].result.gender.w;
+									mapping['07_age_<_18'] 		= answers[answer].result.age['&lt;18'];
+									mapping['08_age_18-23'] 	= answers[answer].result.age['18-23'];
+									mapping['09_age_24-29'] 	= answers[answer].result.age['24-29'];
+									mapping['10_age_30-38'] 	= answers[answer].result.age['30-38'];
+									mapping['11_age_39-48'] 	= answers[answer].result.age['39-48'];
+									mapping['12_age_49_5'] 		= answers[answer].result.age['49-55'];
+									mapping['13_age_>_55'] 		= answers[answer].result.age['55&gt;'];									
+									mapping['14_country_de'] 	= answers[answer].result.country.de;
+									mapping['15_country_at'] 	= answers[answer].result.country.at;
+									mapping['16_country_ch'] 	= answers[answer].result.country.ch;
+									mapping['17_country_other']	= answers[answer].result.country.other;
 									mappings.push(mapping);
 									mapping = [];
 
